--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <section class="activity">
                 <img class="activity-icon" src="./imgs/icons/fire.svg" alt="Camping & Day Use">
                 <h3 class="activity-title">Camping & Day Use</h3>
-                <p class="activity-text">Return to your favorite spot or discover a new one that’s right for you.</p>
+                <p class="activity-text">Return to your favorite spot or discover a new one that's right for you.</p>
             </section>
             <section class="activity">
                 <img class="activity-icon" src="./imgs/icons/fire.svg" alt="Camping & Day Use">
                 <h3 class="activity-title">Camping & Day Use</h3>
-                <p class="activity-text">Return to your favorite spot or discover a new one that’s right for you.</p>
+                <p class="activity-text">Return to your favorite spot or discover a new one that's right for you.</p>
             </section>
             <section class="activity">
                 <img class="activity-icon" src="./imgs/icons/fire.svg" alt="Camping & Day Use">
                 <h3 class="activity-title">Camping & Day Use</h3>
-                <p class="activity-text">Return to your favorite spot or discover a new one that’s right for you.</p>
+                <p class="activity-text">Return to your favorite spot or discover a new one that's right for you.</p>
             </section>
             <section class="activity">
                 <img class="activity-icon" src="./imgs/icons/fire.svg" alt="Camping & Day Use">
                 <h3 class="activity-title">Camping & Day Use</h3>
-                <p class="activity-text">Return to your favorite spot or discover a new one that’s right for you.</p>
+                <p class="activity-text">Return to your favorite spot or discover a new one that's right for you.</p>
             </section>
         </div>
         <!-- activities -->
